# Changelog
# $Id$

mm-dd-10 - Version 5.1.14

   - Removing commented source in fix for Bug#57697
   - Fix for Bug#57697 - Metadata getTables() was not checking for table_name already been quoted.
   - Fix for Bug#57694 - 3byte UTF8 can not be used with 5.5.3+ server.
   - Fix for Bug#57701 - StatementsTest.testBatchRewriteErrors() failing on new servers.
   
   - Fix for Bug#54756 - Cannot retrieve data from ResultSet by column name from a Sphinx daemon.
     We were relying only on "server version string" passed. Now, determining
	 server version is done via protocol flags too, where applicable.

   - Fix for Bug#57022 - cannot execute a store procedure with output parameters,
     database parameter was ignored in db.sp notation. The fix is to "sanitize" 
	 db.sp call just like in patch for noAccessToProcedureBodies. BaseTestCase
	 extended with createDatabase and dropDatabase. Regression test added.

   - Fix for Bug#57262 - "useOldUTF8Behavior" behavior was broken since 5.1.3,
     now explicitly sets connection character set to latin1 ("SET NAMES latin1")
     during connection post-handshake process.
     
   - Patch for problem where "noAccessToProcedureBodies=true" was causing 
     "underprivileged" user not to have access to procedures created by him.

   - Patch for Bug#56305, unhandled NPE in DatabaseMetaData.java when calling 
     wrong-cased function without access to mysql.proc. Although simple by 
     itself, some more enhancements were needed for everything to function 
     properly.  So, along with catching potential NPE due to server bug, a 
     guard against calling JDBC functions with db_name.proc_name notation was 
     also added. Necessary changes added to StringUtils.java too.

   - Added ability to load-balance while auto-commit is enabled.  This 
     introduces two new properties:

       loadBalanceAutoCommitStatementThreshold defines the number of matching 