@@ -3,6 +3,10 @@
 
 mm-dd-10 - Version 5.1.14
 
+   - Fix for Bug#57850 - Refresh SELECT statement doesn't use correct data type.
+     Added Field.valueNeedsQuoting (private final boolean) and protected boolean getvalueNeedsQuoting().
+	 UpdatableResultSet refresher and updater call upon this value now.
+	 
    - Removing commented source in fix for Bug#57697
    - Fix for Bug#57697 - Metadata getTables() was not checking for table_name already been quoted.
    - Fix for Bug#57694 - 3byte UTF8 can not be used with 5.5.3+ server.
